--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "private": true,
   "scripts": {
     "build": "remix vite:build",
-    "dev": "shopify app dev",
+    "dev": "remix vite:dev",
     "codegen": "graphql-codegen",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "@remix-run/node": "2.9.2",
     "@remix-run/react": "2.9.2",
     "@remix-run/serve": "2.9.2",
     "@shopify/polaris": "^13.4.0",
     "@shopify/shopify-api": "^11.0.0",
-    "@shopify/shopify-app-remix": "2.16.1",
+    "@shopify/shopify-app-remix": "^3.8.5",
+    "@shopify/shopify-app-session-storage-prisma": "^6.0.9",
     "@vercel/remix": "2.9.2-patch.1",
     "isbot": "^5.1.9",
     "ol": "^9.2.4",
@@ -24,7 +26,7 @@
   "devDependencies": {
     "@remix-run/dev": "2.9.2",
     "@shopify/app-bridge-react": "^4.0.0",
-    "@shopify/cli": "^4.0.0",
+    "@shopify/cli": "3.59.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
@@ -36,7 +38,8 @@
     "prettier": "^3.3.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^3.6.0"
   },
   "engines": {
     "node": "^18.20 || ^20.10 || >=21.0.0"
