--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shopify/shopify-api": "^11.0.0",
     "@shopify/shopify-app-remix": "^3.8.5",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.9",
+    "@shopify/storefront-api-client": "^1.0.9",
     "@vercel/remix": "2.9.2-patch.1",
     "isbot": "^5.1.9",
     "ol": "^9.2.4",
