--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "cp prisma/schema.production.prisma prisma/schema.prisma && npx prisma generate && npm run build",
   "outputDirectory": "build/client",
-  "framework": "remix"
+  "framework": "remix",
+  "env": {
+    "SHOPIFY_API_KEY": "@shopify_api_key",
+    "SHOPIFY_API_SECRET": "@shopify_api_secret",
+    "SHOPIFY_APP_URL": "@shopify_app_url",
+    "SCOPES": "@scopes",
+    "DATABASE_URL": "@database_url"
+  }
 }
